--- a/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/mainframe.html
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/mainframe.html
@@ -35,6 +35,8 @@
         href="../../lib/font-awesome-4.3.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" type="text/css" th:href="@{/lib/bootstrap-3.3.4/css/bootstrap.css}"
         href="../../lib/bootstrap-3.3.4/css/bootstrap.css"/>
+  <link rel="stylesheet" type="text/css" th:href="@{/lib/perfect-scrollbar/css/perfect-scrollbar.css}"
+        href="../../lib/perfect-scrollbar/css/perfect-scrollbar.css"/>
 
   <link rel="stylesheet" type="text/css" th:href="@{/lib/summernote-0.6.16/summernote.css}"
         href="../../lib/summernote-0.6.16/summernote.css"/>
