make reactjs scroll grid

--- a/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/mainframe.html
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/mainframe.html
@@ -187,8 +187,6 @@
           src="../../js/tallybook/range.js"></script>
   <script type="text/javascript" th:src="@{/js/tallybook/modal-stack.js}"
           src="../../js/tallybook/modal-stack.js"></script>
-  <script type="text/javascript" th:src="@{/js/tallybook/menu.js}"
-          src="../../js/tallybook/menu.js"></script>
   <script type="text/javascript" th:src="@{/js/tallybook/entity-data.js}"
           src="../../js/tallybook/entity-data.js"></script>
   <script type="text/javascript" th:src="@{/js/tallybook/entity-actions.js}"
@@ -211,7 +209,8 @@
 
   <script type="text/javascript" th:src="@{/lib/jquery/jquery-2.1.4.js}"
           src="../../lib/jquery/jquery-2.1.4.min.js"></script>
-  <script th:attr="data-main=@{/js/admin/admin-main.js}" th:src="@{/lib/require.js}" src="../../lib/require.js"></script>
+  <script th:attr="data-main=@{/js/admin/admin-main.js}"
+          th:src="@{/lib/require.js}" src="../../lib/require.js"></script>
 
   <!-- content script -->
   <div th:replace="${'entity/views/' + viewType}:: scripts" />
