--- a/admin-site/src/main/resources/webcontent/admin_style/template/css/entity/entity-grid.css
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/css/entity/entity-grid.css
@@ -171,6 +171,7 @@
 
 .entity-grid-container
 .body{
+    position: relative;
     z-index: 1;
     border-left: 1px solid #DDD;
     border-right: 1px solid #DDD;
@@ -255,6 +256,16 @@
     position: relative;
     z-index: 2;
     bottom: 0;
+    height: 0;
+    width: 100%;
+    display: none;
+}
+.entity-grid-container
+.body-spinner {
+    text-align: center;
+    position: absolute;
+    z-index: 2;
+    top: 0;
     height: 0;
     width: 100%;
     display: none;
