--- a/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/views/entityView.html
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/views/entityView.html
@@ -1,10 +1,13 @@
 <section th:fragment="content">
+    <div id="formSlot">
+    </div>
 
-
-  <div th:include="components/entity-form :: full_entity_form"
+    <div th:include="components/entity-form :: full_entity_form"
        th:with="data=${readResult}, scope=${formScope}"/>
 
 </section>
 
 <div th:fragment="scripts">
+    <script th:attr="data-main=@{/js/form-page.js}"
+            th:src="@{/lib/require.js}" src="../../lib/require.js"></script>
 </div>
