--- a/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/views/entityMainGrid.html
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/views/entityMainGrid.html
@@ -1,12 +1,18 @@
 <section th:fragment="content">
 
-  <div th:include="components/entity-grid :: full_entity_grid "
-       th:with="data=${queryResult},
-       isTemplate=false,
-       scope=${scope}, alignType='window', alignOffset='50' "/>
+    <div id="gridSlot">
+    </div>
 
-  <!--<div th:include="components/entity-grid :: full_entity_grid (scope='main')"-->
+    <!--
+      <div th:include="components/entity-grid :: full_entity_grid "
+         th:with="data=${queryResult},
+         isTemplate=false,
+         scope=${scope}, alignType='window', alignOffset='50' "/>
+
+    <div th:include="components/entity-grid :: full_entity_grid (scope='main')"-->
        <!--th:with="data=${queryResult}"/>-->
 </section>
 <div th:fragment="scripts">
+    <script th:attr="data-main=@{/js/grid-page.js}"
+            th:src="@{/lib/require.js}" src="../../lib/require.js"></script>
 </div>
