--- a/admin-site/src/main/resources/webcontent/admin_style/template/css/entity/entity.css
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/css/entity/entity.css
@@ -38,11 +38,19 @@ section#contentContainer ol.breadcrumb li:last-child > span{
     text-align: right;
     /* padding-right: 6px; */
 }
+.action-group .action-control{
+    margin-left: 2px;
+    margin-right: 2px;
+}
 .action-group .action-control,
 .action-group .action-control .btn {
     display: inline-block;
     padding-bottom: 2px;
     padding-top: 2px;
+}
+
+.action-group .action-control span.fa {
+    margin-right: 3px;
 }
 
 a.entity-form-modal-view{
