--- a/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/views/noSuchRecord.html
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/views/noSuchRecord.html
@@ -7,4 +7,7 @@
 </section>
 
 <div th:fragment="scripts">
+
+  <script th:attr="data-main=@{/js/entity-page.js}"
+          th:src="@{/lib/require.js}" src="../../lib/require.js"></script>
 </div>
