mostly localization stuff

--- a/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/mainframe.html
+++ b/admin-site/src/main/resources/webcontent/admin_style/template/html/entity/mainframe.html
@@ -155,8 +155,8 @@
   <div class="message-dict">
     <p th:if="${messageDict}" th:attr="data-message-dict=${messageDict}"></p>
   </div>
-  <script type="text/javascript" th:src="@{/lib/uri/uri-templates.js}"
-          src="../../lib/uri/uri-templates.js"></script>
+  <script type="text/javascript" th:src="@{/lib/js-cookie-2.1.2/js.cookie-2.1.2.min.js}"
+          src="../../lib/js-cookie-2.1.2/js.cookie-2.1.2.min.js"></script>
   <!-- jQuery -->
   <!-- <script src="//jquery.com/jquery-wp-content/themes/jquery/js/jquery-1.11.2.min.js"></script> -->
   <script type="text/javascript" th:src="@{/lib/jquery/jquery-2.1.4.js}"
